@@ -26,12 +26,11 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 import org.apache.commons.lang3.StringUtils;
-import org.eclipse.tractusx.traceability.investigations.domain.model.AffectedPart;
-import org.eclipse.tractusx.traceability.investigations.domain.model.InvestigationStatus;
+import org.eclipse.tractusx.traceability.qualitynotification.domain.model.QualityNotificationAffectedPart;
+import org.eclipse.tractusx.traceability.qualitynotification.domain.model.QualityNotificationStatus;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @JsonInclude(JsonInclude.Include.NON_NULL)
 public record EDCNotification(@Valid
@@ -71,7 +70,9 @@ public record EDCNotification(@Valid
     }
 
     @JsonIgnore
-    public String getMessageId() { return header.messageId(); }
+    public String getMessageId() {
+        return header.messageId();
+    }
 
     @JsonIgnore
     public String getRelatedNotificationId() {
@@ -79,10 +80,9 @@ public record EDCNotification(@Valid
     }
 
     @JsonIgnore
-    public List<AffectedPart> getListOfAffectedItems() {
+    public List<QualityNotificationAffectedPart> getListOfAffectedItems() {
         return content.listOfAffectedItems().stream()
-                .map(AffectedPart::new)
-                .collect(Collectors.toList());
+                .map(QualityNotificationAffectedPart::new).toList();
     }
 
     public NotificationType convertNotificationType() {
@@ -92,10 +92,10 @@ public record EDCNotification(@Valid
                 .orElseThrow(() -> new IllegalArgumentException("%s not supported notification type".formatted(classification)));
     }
 
-    public InvestigationStatus convertInvestigationStatus() {
+    public QualityNotificationStatus convertInvestigationStatus() {
         String investigationStatus = header().status();
 
-        return InvestigationStatus.fromValue(investigationStatus)
+        return QualityNotificationStatus.fromValue(investigationStatus)
                 .orElseThrow(() -> new IllegalArgumentException("%s not supported investigation status".formatted(investigationStatus)));
     }
 
